[package]
name = "solana-escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

[dev-dependencies]
solana-program-test = "~2.1.0" 
solana-sdk = "~2.1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
anchor-client = "0.31.1"

